--- a/NaiveBayesMultinomialNB_4.ipynb
+++ b/NaiveBayesMultinomialNB_4.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesMultinomialNB.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyO4PAJbSuLuQY4Eh+496kOL",
+      "authorship_tag": "ABX9TyM/i7CP3w226UGOK8cEQn3J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/NaiveBayesMultinomialNB.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/NaiveBayesMultinomialNB_4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -31,7 +31,7 @@
         "id": "ZFojCMRhzU15"
       },
       "source": [
-        "In Multinomial Naïve Bayes the features are assumed to be drawn from a simple Multinomial distribution. Such kind of Naïve Bayes are most appropriate for the features that represents discrete counts."
+        "In Multinomial Naïve Bayes the features are assumed to be drawn from a simple Multinomial distribution. This type of Naïve Bayes is most appropriate for the features that represents discrete counts."
       ]
     },
     {
@@ -74,14 +74,17 @@
         "id": "ImE__1MgCovU"
       },
       "source": [
+        "#the object and the number in that area\n",
         "data = [\n",
         "{'house': 100, 'street': 50, 'shop': 25, 'car': 100, 'tree': 20},\n",
         "\n",
-        "{'house': 5, 'street': 5, 'shop': 0, 'car': 10, 'tree': 500, 'river': 1}\n",
+        "{'house': 5, 'street': 5, 'shop': 0, 'car': 10, 'tree': 500, 'river': 1},\n",
+        "{'house': 50, 'street': 23, 'shop': 12, 'car': 230, 'tree': 100, 'river': 0}\n",
         "] \n",
         "dv = DictVectorizer(sparse=False)\n",
         "X = dv.fit_transform(data)\n",
-        "Y = np.array([1, 0])\n",
+        "#The class 1=city, 0=country\n",
+        "Y = np.array([1, 0,1])\n",
         "print(X)\n",
         "#car house river shop street tree"
       ],
@@ -153,6 +156,23 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assignment**:<br>\n",
+        "1. Add more rows to the dataset<br>\n",
+        "You will need to add a row in the data and add a city or country label in the labels<br>\n",
+        "Train the model, change to test data. <br>\n",
+        "How well does the model predict?\n",
+        "\n",
+        "2. Add more columns to the data set<br>\n",
+        "You will need to add more columns to the test data also. You can add things like people, businesses that are not shops, open area, etc. \n",
+        "How well does the model predict?\n"
+      ],
+      "metadata": {
+        "id": "IK-u5iSXBYhd"
+      }
     }
   ]
 }
