--- a/NaiveBayesMultinomialNB_4.ipynb
+++ b/NaiveBayesMultinomialNB_4.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesMultinomialNB.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM/i7CP3w226UGOK8cEQn3J",
+      "authorship_tag": "ABX9TyMKv3PVfoJcwnkUpwVGR2gl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,7 @@
         "#The class 1=city, 0=country\n",
         "Y = np.array([1, 0,1])\n",
         "print(X)\n",
-        "#car house river shop street tree"
+        "#car house river shop street tree (alphabetical order)"
       ],
       "execution_count": null,
       "outputs": []
