--- a/KNN2.ipynb
+++ b/KNN2.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOuT6ktOn4/4p/SGNEQ7cUR",
+      "authorship_tag": "ABX9TyOBaD+YuCG6LWQsfIQt/Db3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,7 +80,7 @@
       },
       "source": [
         "dataset = pd.read_csv(path, names = headernames)\n",
-        "dataset.head()"
+        "dataset"
       ],
       "execution_count": null,
       "outputs": []
@@ -147,9 +147,9 @@
       },
       "source": [
         "plt.figure(figsize=(10,3))\n",
-        "fig = plt.scatter(X[:,[0]],y, marker='o', c=X[:,[0]],s=25)\n",
+        "fig = plt.scatter(X[:,[1]],y, marker='o', c=X[:,[0]],s=25)\n",
         "plt.colorbar(fig)\n",
-        "plt.xlabel(\"sepal-length\")\n",
+        "plt.xlabel(\"sepal-width\")\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -194,6 +194,17 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20)"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train.shape"
+      ],
+      "metadata": {
+        "id": "AENJ3WebsjsE"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -289,9 +300,18 @@
       },
       "source": [
         "Create and train the model<br>\n",
-        "n_neighbors : int, optional (default = 5)<br>\n",
-        "Number of neighbors to use by default for :meth:`kneighbors` queries."
+        "n_neighbors : int, optional (default = 5)<br>\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The 'metric' parameter of KNeighborsClassifier must be a str among<br><br> \n",
+        "{'cityblock', 'sokalmichener', 'hamming', 'cosine', 'russellrao', 'kulsinski', 'infinity', 'minkowski', 'braycurtis', 'l1', 'dice', 'haversine', 'jaccard', 'wminkowski', 'p', 'sokalsneath', 'nan_euclidean', 'l2', 'rogerstanimoto', 'euclidean', 'pyfunc', 'seuclidean', 'sqeuclidean', 'yule', 'mahalanobis', 'chebyshev', 'canberra', 'precomputed', 'manhattan', 'correlation', 'matching'"
+      ],
+      "metadata": {
+        "id": "cg7-j-o0uihE"
+      }
     },
     {
       "cell_type": "code",
@@ -299,7 +319,7 @@
         "id": "kppRidjfbVsM"
       },
       "source": [
-        "classifier = KNeighborsClassifier(n_neighbors = 8)\n",
+        "classifier = KNeighborsClassifier(n_neighbors = 8, metric='manhattan')\n",
         "classifier.fit(X_train, y_train)"
       ],
       "execution_count": null,
