--- a/KNN2.ipynb
+++ b/KNN2.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOBaD+YuCG6LWQsfIQt/Db3",
+      "authorship_tag": "ABX9TyOZJ+9YMLDxD2sEiPDOjhVo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -307,7 +307,7 @@
       "cell_type": "markdown",
       "source": [
         "The 'metric' parameter of KNeighborsClassifier must be a str among<br><br> \n",
-        "{'cityblock', 'sokalmichener', 'hamming', 'cosine', 'russellrao', 'kulsinski', 'infinity', 'minkowski', 'braycurtis', 'l1', 'dice', 'haversine', 'jaccard', 'wminkowski', 'p', 'sokalsneath', 'nan_euclidean', 'l2', 'rogerstanimoto', 'euclidean', 'pyfunc', 'seuclidean', 'sqeuclidean', 'yule', 'mahalanobis', 'chebyshev', 'canberra', 'precomputed', 'manhattan', 'correlation', 'matching'"
+        "{'cityblock', 'sokalmichener', 'hamming', 'cosine', 'russellrao', 'kulsinski', 'infinity', 'minkowski', 'braycurtis', 'l1', 'dice', 'haversine', 'jaccard', 'wminkowski', 'p', 'sokalsneath', 'nan_euclidean', 'l2', 'rogerstanimoto', 'euclidean', 'pyfunc', 'seuclidean', 'sqeuclidean', 'yule', 'mahalanobis', 'chebyshev', 'canberra', 'precomputed', 'manhattan', 'correlation', 'matching'}"
       ],
       "metadata": {
         "id": "cg7-j-o0uihE"
@@ -319,7 +319,7 @@
         "id": "kppRidjfbVsM"
       },
       "source": [
-        "classifier = KNeighborsClassifier(n_neighbors = 8, metric='manhattan')\n",
+        "classifier = KNeighborsClassifier(n_neighbors = 8, metric='euclidean')\n",
         "classifier.fit(X_train, y_train)"
       ],
       "execution_count": null,
