--- a/KNN4.ipynb
+++ b/KNN4.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN4.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP3+h7vVXMO6dBqj7YhqdmS",
+      "authorship_tag": "ABX9TyPbsoH/qfECStUePVlKORf/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -277,7 +277,7 @@
         "id": "Bvrnp1jsH9xw"
       },
       "source": [
-        "Assignment 2<br>\n",
+        "**Assignment 2**<br>\n",
         "The code below creates a synthetic dataset. <br>\n",
         "1. Modify the size of the dataset<br>\n",
         "2. Modify the ratio of train and test sets<br>\n",
