--- a/KNN3.ipynb
+++ b/KNN3.ipynb
@@ -49,7 +49,7 @@
         "from random import randint\n",
         "from sklearn.neighbors import KNeighborsClassifier"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
       "source": [
         "n_neighbors = 5 #change "
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -95,19 +95,34 @@
         "                          flip_y=0,weights=[0.33,0.33,0.33], \n",
         "                          random_state=randint(0,20))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LOu3impvXdFk"
+        "id": "LOu3impvXdFk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6a29a7e6-fab1-4713-8179-0ef171a2cf29"
       },
       "source": [
         "X.shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(50, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -118,7 +133,7 @@
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    X, y, test_size=0.33, random_state=42)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -143,7 +158,7 @@
         "U_trained=clf_U.fit(X_train, y_train)\n",
         "y_U_pred = clf_U.predict(X_test)\n"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -156,7 +171,7 @@
         "D_trained =clf_D.fit(X_train, y_train)\n",
         "y_D_pred = clf_D.predict(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -171,17 +186,58 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lh3TTPR3fLS9"
+        "id": "lh3TTPR3fLS9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a1523ade-24ea-45ab-bde7-bdb44c3c4bf6"
       },
       "source": [
+        "print(\"clf_U model\")\n",
         "print(confusion_matrix(y_test, y_U_pred))\n",
         "print(classification_report(y_test, y_U_pred))\n",
         "\n",
+        "print(\"clf_D model\")\n",
         "print(confusion_matrix(y_test, y_D_pred))\n",
         "print(classification_report(y_test, y_D_pred))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "clf_U model\n",
+            "[[4 0 0]\n",
+            " [0 7 0]\n",
+            " [0 0 6]]\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00         4\n",
+            "           1       1.00      1.00      1.00         7\n",
+            "           2       1.00      1.00      1.00         6\n",
+            "\n",
+            "    accuracy                           1.00        17\n",
+            "   macro avg       1.00      1.00      1.00        17\n",
+            "weighted avg       1.00      1.00      1.00        17\n",
+            "\n",
+            "clf_D model\n",
+            "[[4 0 0]\n",
+            " [0 7 0]\n",
+            " [0 0 6]]\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00         4\n",
+            "           1       1.00      1.00      1.00         7\n",
+            "           2       1.00      1.00      1.00         6\n",
+            "\n",
+            "    accuracy                           1.00        17\n",
+            "   macro avg       1.00      1.00      1.00        17\n",
+            "weighted avg       1.00      1.00      1.00        17\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
