--- a/Multi_Output_Linear_Regression.ipynb
+++ b/Multi_Output_Linear_Regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP+LkBZO9iHkCk0DnwAL0cc",
+      "authorship_tag": "ABX9TyPEdlPxXk1QhD6pPSLNrCTh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,7 +158,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Use the sklearn Linear Regression model"
+        "# Use the sklearn Linear Regression models"
       ],
       "metadata": {
         "id": "uM30Ru-ERwaB"
@@ -383,7 +383,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The following example will result in an error"
+        "**The following example will result in an error**"
       ],
       "metadata": {
         "id": "m-rBILRLVnQL"
@@ -451,12 +451,22 @@
         "\n",
         "There are two main approaches to partitioning the problem.\n",
         "\n",
-        "1. **Direct Method:** this involves developing a separate regression model for each output value to be predicted. In other words each target value is modeled directly.\n",
+        "1. **Chain of Models**: this is an extension of the first method except the models are organized into a chain. The prediction from the first model is taken as part of the input to the second model, and the process of output-to-input dependency repeats along the chain of models.\n",
         "\n",
-        "2. **Chain of Models**: this is an extension of the first method except the models are organized into a chain. The prediction from the first model is taken as part of the input to the second model, and the process of output-to-input dependency repeats along the chain of models."
+        "2. **Direct Method:** this involves developing a separate regression model for each output value to be predicted. In other words each target value is modeled directly.\n",
+        "\n"
       ],
       "metadata": {
         "id": "TdYrDB5WW6FR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Chain of Models"
+      ],
+      "metadata": {
+        "id": "SJiY8Es_ttNQ"
       }
     },
     {
@@ -611,6 +621,182 @@
       ],
       "metadata": {
         "id": "FBboIyfGaF69"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Direct Method"
+      ],
+      "metadata": {
+        "id": "xnGlCouTt0j2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The direct approach to multioutput regression involves dividing the regression problem into a separate problem for each target variable to be predicted.\n",
+        "\n",
+        "This assumes that the outputs are independent of each other, which might not be a correct assumption. Nevertheless, this approach can provide surprisingly effective predictions on a range of problems and may be worth trying, at least as a performance baseline.\n",
+        "\n",
+        "For example, the outputs for your problem may, in fact, be mostly independent, if not completely independent, and this strategy can help you find out.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "E_JhQeDxvwUK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This approach uses the MultiOutputRegressor class that takes a regression model as an argument. It will then create one instance of the provided model for each output in the problem."
+      ],
+      "metadata": {
+        "id": "gfncas-Gvz6a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from numpy import mean\n",
+        "from numpy import std\n",
+        "from numpy import absolute\n",
+        "from sklearn.datasets import make_regression\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.model_selection import RepeatedKFold\n",
+        "from sklearn.multioutput import MultiOutputRegressor\n",
+        "from sklearn.svm import LinearSVR"
+      ],
+      "metadata": {
+        "id": "i_qbNMYAuzh-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Direct with Cross Validation"
+      ],
+      "metadata": {
+        "id": "xn1JpI8mzLyX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The example below demonstrates evaluating the MultiOutputRegressor class with linear SVR using repeated k-fold cross-validation and reporting the average mean absolute error (MAE) across all folds and repeats."
+      ],
+      "metadata": {
+        "id": "_fh94JP_wAls"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define base model\n",
+        "model = LinearSVR()\n",
+        "# define the direct multioutput wrapper model\n",
+        "wrapper = MultiOutputRegressor(model)"
+      ],
+      "metadata": {
+        "id": "rECy8ZwxvA3q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define the evaluation procedure\n",
+        "cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+        "# evaluate the model and collect the scores\n",
+        "n_scores = cross_val_score(wrapper, X, y, scoring='neg_mean_absolute_error', cv=cv, n_jobs=-1)\n",
+        "# force the scores to be positive\n",
+        "n_scores = absolute(n_scores)\n"
+      ],
+      "metadata": {
+        "id": "sntoNIMEt3fI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# summarize performance\n",
+        "print('MAE: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
+      ],
+      "metadata": {
+        "id": "4n8C8NnfvEOR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Direct Method"
+      ],
+      "metadata": {
+        "id": "8eiws3BbzQ8k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# example of making a prediction with the direct multioutput regression model\n",
+        "from sklearn.datasets import make_regression\n",
+        "from sklearn.multioutput import MultiOutputRegressor\n",
+        "from sklearn.svm import LinearSVR"
+      ],
+      "metadata": {
+        "id": "A-PLqda1wRrC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define base model\n",
+        "model = LinearSVR()\n",
+        "# define the direct multioutput wrapper model\n",
+        "wrapper = MultiOutputRegressor(model)\n",
+        "# fit the model on the whole dataset\n",
+        "wrapper.fit(X, y)"
+      ],
+      "metadata": {
+        "id": "7QVRiFEIy-hz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# make a single prediction\n",
+        "yhat = wrapper.predict([X[0]])\n",
+        "# summarize the prediction\n",
+        "print('Predicted: %s' % yhat[0])"
+      ],
+      "metadata": {
+        "id": "hCixJ61UwMUB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assignment**<br>\n",
+        "Change the data so three outputs are needed.\n",
+        "Change the models to predict three outputs"
+      ],
+      "metadata": {
+        "id": "FBnLIrtrzc7U"
       }
     }
   ]
