--- a/Multi_Output_Linear_Reg_DNN.ipynb
+++ b/Multi_Output_Linear_Reg_DNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNScwDbxIrL/bVb6+mAfoag",
+      "authorship_tag": "ABX9TyMWd4N3HqcZ9WUXcxMSSYCD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,6 +142,17 @@
       ],
       "metadata": {
         "id": "OA1ICS7j--2G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = get_model(n_inputs, n_outputs)"
+      ],
+      "metadata": {
+        "id": "8UYyFRvmAFAt"
       },
       "execution_count": null,
       "outputs": []
