--- a/Multi_Output_Linear_Reg_DNN.ipynb
+++ b/Multi_Output_Linear_Reg_DNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMWd4N3HqcZ9WUXcxMSSYCD",
+      "authorship_tag": "ABX9TyNnMX2k7pEFgS2chrlJHsZ6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +28,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Multi Ouptput Linear Regression with DNNs"
+      ],
+      "metadata": {
+        "id": "ggyNMwkFAPFV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Get the libraries**"
+      ],
+      "metadata": {
+        "id": "oH82m2HrCapf"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# mlp for multi-output regression\n",
         "from numpy import mean\n",
         "from numpy import asarray\n",
         "from numpy import std\n",
@@ -48,30 +65,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# get the dataset\n",
-        "def get_dataset():\n",
-        " X, y = make_regression(n_samples=1000, n_features=10, n_informative=5, n_targets=3, random_state=2)\n",
-        " return X, y"
+        " X, y = make_regression(n_samples=1000, n_features=10, n_informative=5, n_targets=3, random_state=2)"
       ],
       "metadata": {
         "id": "3RSa7VfI-C7m"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# get the model\n",
-        "def get_model(n_inputs, n_outputs):\n",
-        " model = Sequential()\n",
-        " model.add(Dense(20, input_dim=n_inputs, kernel_initializer='he_uniform', activation='relu'))\n",
-        " model.add(Dense(n_outputs))\n",
-        " model.compile(loss='mae', optimizer='adam')\n",
-        " return model"
-      ],
-      "metadata": {
-        "id": "Jgv_3kjP-F0N"
       },
       "execution_count": null,
       "outputs": []
@@ -115,9 +112,6 @@
       },
       "outputs": [],
       "source": [
-        " # load dataset\n",
-        "X, y = get_dataset()\n",
-        "# evaluate model\n",
         "results = evaluate_model(X, y)\n",
         "# summarize performance\n",
         "print('MAE: %.3f (%.3f)' % (mean(results), std(results)))"
@@ -149,7 +143,10 @@
     {
       "cell_type": "code",
       "source": [
-        "model = get_model(n_inputs, n_outputs)"
+        " model = Sequential()\n",
+        " model.add(Dense(20, input_dim=n_inputs, kernel_initializer='he_uniform', activation='relu'))\n",
+        " model.add(Dense(n_outputs))\n",
+        " model.compile(loss='mae', optimizer='adam')"
       ],
       "metadata": {
         "id": "8UYyFRvmAFAt"
